feat: añado linter y prettier y actualizo CV

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -64,7 +64,7 @@
             >Contáctame</a
           >
           <a
-            href="https://drive.google.com/file/d/1YMRuvU2YU1vsYiijjfxBCXjxqv1Z7rXL/view?usp=sharing"
+            href="https://drive.google.com/file/d/1ZdWP-ms_TRWE9cQU6fsA7uGkjl3J19xV/view?usp=sharing"
             title="Download CV"
             class="button button-header stroke"
             target="_blank"
@@ -202,15 +202,15 @@
             </li>
             <li>
               <div class="progress percent80"><span>80%</span></div>
-              <strong>REACT & REDUX</strong>
+              <strong>REACT & REDUX & ZUSTAND</strong>
             </li>
             <li>
               <div class="progress percent75"><span>75%</span></div>
-              <strong>NODE & EXPRESS</strong>
+              <strong>NODE & EXPRESS & NEST</strong>
             </li>
             <li>
               <div class="progress percent75"><span>75%</span></div>
-              <strong>MONGODB & MYSQL</strong>
+              <strong>MONGODB & SQL</strong>
             </li>
             <li>
               <div class="progress percent70"><span>70%</span></div>
@@ -230,7 +230,7 @@
             >Contáctame</a
           >
           <a
-            href="https://drive.google.com/file/d/1YMRuvU2YU1vsYiijjfxBCXjxqv1Z7rXL/view?usp=sharing"
+            href="https://drive.google.com/file/d/1ZdWP-ms_TRWE9cQU6fsA7uGkjl3J19xV/view?usp=sharing"
             title="Download CV"
             class="button button-black stroke"
             target="_blank"
@@ -258,6 +258,78 @@
         </div>
       </div>
       <!-- /section-intro-->
+
+      <div class="resume-timeline">
+        <div class="resume-header">
+          <h2>Experiencia laboral</h2>
+        </div>
+        <!-- /resume-header -->
+
+        <div>
+          <div class="timeline-wrap">
+            <div class="timeline-block">
+              <div class="timeline-ico">
+                <i class="fa fa-briefcase"></i>
+              </div>
+
+              <div class="timeline-header">
+                <h3>Keynet Software</h3>
+                <p>2024 - Present</p>
+              </div>
+
+              <div class="timeline-content">
+                <h4>Full-stack developer</h4>
+
+                <p>
+                  Desarrollo de aplicaciones SaaS eficientes y escalables, con
+                  un enfoque en optimizar la experiencia del usuario.
+                  Implementación de tecnologías modernas como Next.js en el
+                  frontend, y Nest.js junto con Prisma como ORM en el backend,
+                  utilizando una arquitectura basada en DDD (Domain-Driven
+                  Design).
+                </p>
+
+                <p>
+                  Diseño y desarrollo de BrokerSuit y AgroSuit, dos soluciones
+                  SaaS esenciales para la automatización y gestión de procesos
+                  específicos en sus respectivos sectores, contribuyendo a
+                  mejorar significativamente la eficiencia operativa de los
+                  clientes.
+                </p>
+
+                <p>
+                  Colaboración estrecha con el equipo en la mejora continua del
+                  software, aplicando principios de clean architecture para
+                  asegurar la escalabilidad, mantenibilidad y calidad de los
+                  proyectos a largo plazo.
+                </p>
+              </div>
+            </div>
+
+            <div class="timeline-block">
+              <div class="timeline-ico">
+                <i class="fa fa-briefcase"></i>
+              </div>
+
+              <div class="timeline-header">
+                <h3>OXYGEN Workspace</h3>
+                <p>2023 - 2024</p>
+              </div>
+
+              <div class="timeline-content">
+                <h4>Hotel Miranda | Full-stack developer</h4>
+                <p>
+                  Desarrollo de un proyecto integral para la cadena hotelera,
+                  abarcando tanto la interfaz visual para el usuario final como
+                  la plataforma administrativa. Además, llevé a cabo la
+                  implementación del servidor, asegurando una solución completa
+                  y cohesiva.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="resume-timeline">
         <div class="resume-header">
@@ -341,39 +413,6 @@
         </div>
       </div>
       <!-- /resume-timeline -->
-
-      <div class="resume-timeline">
-        <div class="resume-header">
-          <h2>Experiencia laboral</h2>
-        </div>
-        <!-- /resume-header -->
-
-        <div>
-          <div class="timeline-wrap">
-            <div class="timeline-block">
-              <div class="timeline-ico">
-                <i class="fa fa-briefcase"></i>
-              </div>
-
-              <div class="timeline-header">
-                <h3>OXYGEN Workspace</h3>
-                <p>2023 - Present</p>
-              </div>
-
-              <div class="timeline-content">
-                <h4>Hotel Miranda | Full-stack developer</h4>
-                <p>
-                  Desarrollo de un proyecto integral para la cadena hotelera,
-                  abarcando tanto la interfaz visual para el usuario final como
-                  la plataforma administrativa. Además, llevé a cabo la
-                  implementación del servidor, asegurando una solución completa
-                  y cohesiva.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <!-- Portfolio Section
@@ -397,17 +436,11 @@
           <div class="folio-item">
             <div class="item-wrap">
               <img src="images/portfolio/miranda.png" alt="Miranda" />
-              <a
-                href="http://51.44.22.83/"
-                class="overlay"
-                target="_blank"
-              >
+              <a href="http://51.44.22.83/" class="overlay" target="_blank">
                 <div class="folio-item-box">
                   <div class="folio-item-text">
                     <h3 class="folio-title">Hotel Miranda</h3>
-                    <span class="folio-types">
-                      Web Development | DJANGO</span
-                    >
+                    <span class="folio-types"> Web Development | DJANGO</span>
                   </div>
                 </div>
               </a>
@@ -847,6 +880,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="./src/app/main.js"></script>
   </body>
 </html>
